EPMRPP-104918 || add access checks upon update test items